Home Page css image alignment fixed

--- a/GoingMyWay/src/app/home/home.page.scss
+++ b/GoingMyWay/src/app/home/home.page.scss
@@ -1,15 +1,10 @@
 #outerBox{
   width: 100%;
   height: 100%;
-  background-attachment: fixed;
-  background: url('../assets/roadsmall.jpg');    
+  background: url('../assets/homePage.jpg') no-repeat;
+  background-position: 47.5%;
 }    
 #instructions{
-  margin: auto;
-  width: 65%;
-  height: 80%;
-  border: 3px solid dodgerblue;
   padding: 10px;
   text-align: center;
-  align-content: center;
 }
